# Project1

./: .coverage  .env  .flake8  README.md  main.py  mylog.txt  pyproject.toml
data/: operations.json
src/: decorators.py  external_api.py  generators.py  main.py  masks.py  mylog.txt  processing.py  read_transact.py  utils.py  widget.py
tests/: conftest.py  test_decorators.py  test_external_api.py  test_generators.py  test_masks.py  test_processing.py  test_read_transact.py  test_widget.py  tests_main.py
