[project]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = [
    {name = "Igor Chertovskoy",email = "igor.chertovskoy.88.skypro@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest-cov (>=6.0.0,<7.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "self (>=2020.12.3,<2021.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.2"
black = "^25.1.0"
mypy = "^1.15.0"
isort = "^6.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.0.0"

[tool.flake8]
max-line-length = 119
exclude = '.git, __pycache__, venv, .venv'
mypy = "^1.15.0"

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = 'venv'
black = "^25.1.0"

[toll.black]
max-line-length = 119
exclude = '.git'
isort = "^6.0.1"

[toll.isort]
max-line-length = 119

